# tren

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: chunk.rs  cli.rs  lib.rs  main.rs  translate.rs
src/chunk/: docx.rs  mod.rs  pandoc_ast.rs
webui/: README.md  package.json
webui/src/lib/: job.ts
webui/src/lib/components/: app-sidebar.svelte  data-table.svelte
webui/src/routes/: +layout.svelte  +page.svelte
webui/src/routes/job/: +page.svelte
