[package]
name = "tren"
version = "0.1.0"
edition = "2024"
description = "Customized machine translation pipeline on rich text document using LLM"
license = "MIT"
repository = "https://git.napatsc.com/ns/tren"

[dependencies]
anyhow = "1.0.100"
pandoc = "0.8.11"
pandoc_types = "0.6.0"
# reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
