[package]
name = "tren"
version = "0.1.0"
edition = "2024"
description = "Customized machine translation pipeline on rich text document using LLM"
license = "MIT"
repository = "https://git.napatsc.com/ns/tren"
authors = [
	"Napat Srichan <me@napatsc.com>"
]

[dependencies]
anyhow = "1.0.100"
async-openai = { version = "0.32.3", features = ["chat-completion"] }
clap = { version = "4.5.54", features = ["derive"] }
docx-rust = "0.1.10"
dotenv = "0.15.0"
futures = "0.3.31"
minijinja = "2.14.0"
pandoc = "0.8.11"
pandoc_types = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
